--- a/css/style.css
+++ b/css/style.css
@@ -860,9 +860,79 @@ h2.sorting-heading {
 .filters-form {
 	width: 328px;
 	margin: 0;
-	padding: 0;
+	padding: 87px 68px 0 60px;
 
 	background-color: #ebebeb;
+}
+
+.filters-fieldset {
+	position: relative;
+
+	margin: 0;
+	margin-bottom: 53px;
+	padding: 0;
+
+	border: none;
+}
+
+.filters-fieldset::before {
+	content: '';
+
+	position: absolute;
+	top: -15px;
+	left: 0;
+
+	width: 100%;
+	height: 2px;
+
+	background-color: #000000;
+}
+
+.range-field {
+	position: relative;
+}
+
+.range-btn {
+	position: absolute;
+	top: -10px;
+	left: 0;
+	z-index: 1;
+
+	margin: 0;
+	padding: 0;
+	width: 20px;
+	height: 20px;
+
+	background-color: #ababab;
+	border: 8px solid #ffffff;
+	border-radius: 50%;
+	box-shadow: 0 2px 0 0 #dadada;
+}
+
+.range-field .range-btn:nth-of-type(2) {
+	left: 110px;
+}
+
+.range-line {
+	position: relative;
+
+	width: 100%;
+	height: 2px;
+
+	background-color: #dbdbdb;
+}
+
+.range-line::before {
+	content: '';
+
+	position: absolute;
+	top: 0;
+	left: 0;
+
+	width: 60%;
+	height: 100%;
+
+	background-color: #91c92f;
 }
 
 .filters-form ul {
@@ -873,6 +943,9 @@ h2.sorting-heading {
 }
 
 .filters-form legend {
+	margin: 0;
+	margin-bottom: 28px;
+	padding: 0;
 	font-size: 18px;
 	line-height: 24px;
 }
